src/test/deca/syntax/valid/extension/ArrayOfBigDimensions.deca
{
	int[][][][] bigMat = new int[3][2][1][2];
	int[][][] bigMat2 = new int[2][1][2];
	
	bigMat = new int[4][3][2][1];
	bitMat[0][0][0][0] = 17;
}