src/test/deca/syntax/invalid/extension/wrongAssign.deca
{
	int[][] mat = new int[5][3];
	mat[0] = { 1, 2, 3, 4 };

}